--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="bcreader_showall">Show All</string>
     <string name="bcreader_scanneditems" formatted="false">Scanned Items (%d)</string>
     <string name="bcreader_scantext">Tap to scan</string>
+    <string name="title_activity_scanned_item_detail">ScannedItemDetailActivity</string>
 </resources>
