add scan details fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,13 @@
     <string name="bcreader_showall">Show All</string>
     <string name="bcreader_scanneditems" formatted="false">Scanned Items (%d)</string>
     <string name="bcreader_scantext">Tap to scan</string>
-    <string name="title_activity_scanned_item_detail">ScannedItemDetailActivity</string>
+
+    <string name="title_activity_scanned_item_detail">Scan Details</string>
+    <string name="detail_nodescription" formatted="false">Unknown (%s)</string>
+    <string name="detail_scantime" formatted="false">Updated %s</string>
+    <string name="detail_codetype" formatted="false">Type %s</string>
+    <string name="details_jsonsource" formatted="false">JSON Source: %s (%s)</string>
+    <string name="detail_qty" formatted="false">Qty: %d</string>
+
+
 </resources>
